# SFML_Informatyka

./: CMakeLists.txt  main.cpp
